crates/viewer_support/re_dataframe_ui/tests/integration/snapshots/integration__filter_tests__int_all_types@UInt8Type.snap
---
source: crates/viewer_support/re_dataframe_ui/tests/integration/filter_tests.rs
expression: test_results
---
TestResult {
    filter: Int(
        IntFilter {
            operator: Eq,
            rhs_value: Some(
                3,
            ),
        },
    ),
    field: Field {
        name: "column",
        data_type: UInt8,
    },
    unfiltered: PrimitiveArray<UInt8>
    [
      1,
      2,
      3,
      4,
      5,
    ],
    filtered: PrimitiveArray<UInt8>
    [
      3,
    ],
}
